--- a/app/Makefile
+++ b/app/Makefile
@@ -1,2 +1,13 @@
-gensite:
-	
+PAGE_DIR:=pages/
+HTML_DIR:=view/pages/
+GENERATOR:=rdiscount
+
+PAGES:=$(wildcard $(PAGE_DIR)*.md)
+HTMLS:=$(subst md,html,$(subst $(PAGE_DIR),$(HTML_DIR),$(PAGES)))
+
+.PHONY: pages *.html
+
+%.html:
+	rdiscount $(subst $(HTML_DIR),$(PAGE_DIR),$(subst html,md,$@)) > $@
+
+pages: $(HTMLS)
